# python_query_tokenizer

./: README.md  makefile  pyproject.toml
.github/workflows/: makefile.yml
query_tokenizer/: cli.py  string_tokenizer.py
tests/: __init__.py
